--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-  <title>Crypter NFT</title>
+  <title>Get $NEAR NFTs</title>
   <meta
-    content="Epic NFT Marketplace UI Design Kit"
+    content="Building for the $NEAR marketplace"
     name="description">
-  <meta content="Crypter - NFT Marketplace UI Kit" property="og:title">
+  <meta content="Building for NEAR" property="og:title">
   <meta
     content="Epic NFT Marketplace UI Design Kit"
     property="og:description">
   <meta content="%PUBLIC_URL%/fb-og-image.png" property="og:image">
   <meta property="og:url" content="https://ui8.net/ui8/products/crypter-nft-marketplace-ui-kit">
   <meta property="og:site_name" content="crypter-nft-marketplace-ui-kit">
-  <meta content="Crypter - NFT Marketplace UI Kit" property="twitter:title">
+  <meta content="Building for NEAR" property="twitter:title">
   <meta
-    content="Premium Web UI Kit for Fitness Experience"
+    content="Building for NEAR"
     property="twitter:description">
   <meta content="%PUBLIC_URL%/twitter-card.png" property="twitter:image">
   <meta property="og:type" content="website">
